@@ -6,25 +6,54 @@ package AlgoEx_Easy;
 // write a function that determines whether the second array
 // is a subsequence of the first one.
 
+// Numbers and the order matters.
+
 // array =  = [5, 1, 22, 25, 6, -1, 8, 10];
 //sequence =  = [1, 6, -1, 10];
+
+// basically copied from 2.pdf.
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 public class ValidateSubsequence_0 {
     public static void main(String[] args) {
 
-        List<Integer> array = List.of(12, 9, 13, 4, 6, 2, 4, 12, 15);
-        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> array = Arrays.asList(5, 1, 22, 25, 6, -1, 8, 10);
+        List<Integer> sequence = Arrays.asList(1, 6, -1, 10 );
 
-        boolean res = usingFirstFn(List<Integer> array, List<Integer> sequence);
-        System.out.println("res =" + res);
+        https://www.java67.com/2015/10/how-to-declare-arraylist-with-values-in-java.html#ixzz83diuzTCu
+
+         usingForLoopFn(array,  sequence);
+//        System.out.println("boolean res = res =" + res);
         boolean res2 = usingPointerFn();
-        System.out.println("res2 =" + res2);
+//        System.out.println("res2 =" + res2);
+
+        boolean res3 = usingForLoopFn(array,  sequence);
+        System.out.println("res3 =" + res2);
     }
 
-    public static boolean usingFirstFn(List<Integer> array, List<Integer> sequence){
+    public static boolean usingForLoopFn(List<Integer> array, List<Integer> sequenceAr){
+//        System.out.println("36-array =" + array);
+//        System.out.println("37 sequenceAr =" + sequenceAr);
 
-        
-        return false;
+        int seqId=0 ;
+        for (int i = 0 ; i < array.size(); i++) {
+                if ( seqId == array.size() ) { break; }
+
+                      if ( sequenceAr.get(seqId) == array.get(i) ) {
+                          // good
+                          seqId++;
+                          continue;
+                      }
+//                return false;
+
+        }
+
+       return (seqId == sequenceAr.size()) ;
+
+
     }
     public static boolean usingPointerFn(){
         return false;
